# SocketPackage

./: AGENTS.md  GEMINI.md  README.md  pyproject.toml
.cline/skills/cr-csharp/: SKILL.md
.cline/skills/open-mr/: SKILL.md
.cline/skills/open-mr/scripts/: ensure-glab.sh
.cline/skills/openspec-propose/: SKILL.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/socket_package/: __init__.py
src/socket_package/Client/: ClientSocket.py  __init__.py
src/socket_package/Protocol/: FrameCodec.py  MyByteArray.py  MySocket.py  ProtocolKinds.py  RecvMsgProtocol.py  SocketConfig.py
src/socket_package/Server/: ServerSocket.py  __init__.py
tests/: ProtocolKinds.py  SampleClientManager.py  SampleClientRecvMsgProtocol.py  SampleServerManager.py  SampleServerRecvMsgProtocol.py  mainClient.py  mainServer.py  test_config_and_sample_protocols.py  test_frame_codec.py  test_protocol_router.py  test_socket_sendmessages.py
