[project]
name = "socket_package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "2887_林家豪", email = "bjioljlo@chinesgamer.net" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
]

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
